--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,11 +48,11 @@
     <div class="tab-pane" id="tab3">
       <fieldset>
         <legend>Informações Acadêmicas e de Experiências</legend>
-        <%= f.input :postgraduate,        :as => :boolean %>
-        <%= f.input :doctorate_in_law,    :as => :boolean %>
-        <%= f.input :master_of_law,       :as => :boolean %>
-        <%= f.input :postgraduate_in_law, :as => :boolean %>
-        <%= f.input :foreign_laguage,     :as => :boolean %>
+        <%= f.input :postgraduate        %>
+        <%= f.input :doctorate_in_law    %>
+        <%= f.input :master_of_law       %>
+        <%= f.input :postgraduate_in_law %>
+        <%= f.input :foreign_laguage     %>
       </fieldset>
     </div><!-- tab3 -->
 
