--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -4,7 +4,7 @@
   <%= render("shared/sidebar") %>
 <% end %>
 
-<section class="about">
+<article id="about">
 
 <h1><%= t(".container_title") %></h1>
 
@@ -108,4 +108,4 @@ competente, coisa que só um diploma não garante.</p>
 </p>
 
 <p>Dessa forma nasceu ALIK.</p>
-</section>
+</article>
