--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -1,48 +1,16 @@
-input.string{
-  padding: 6px;
-  font-size: 1.2em;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  color: #696969;
-  background: #fff;
+.button.gloss{
+	background: #5DA423 url("/assets/button-gloss.png") repeat-x 0 -34px;
 }
 
-input.password{
-  padding: 6px;
-  font-size: 1.2em;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  color: #696969;
-  background: #fff;
+.blue{
+	background: #00A6FC url("/assets/button-gloss.png") repeat-x 0 -34px;
 }
 
-textarea.text{
-  padding: 10px 6px;
-  font-family: Helvetica, Arial, Sans-Serif;
-  height: 130px;
-  line-height: 1.4em;
+.secondary.gloss{
+	background: #E9E9E9 url("/assets/button-gloss.png") repeat-x 0 -34px;
 }
 
-input.search {
-  margin-left: 20px;
-	font-size: 1.4em;
-	padding: 10px 20px;
-	width: 750px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  background: white;
-}
-
-ul.buttons-home{
-  width: 100%;
-  height: 50px;
-  margin-left:8px;
-	margin-top:10px;
-}
-ul.buttons-home li{
-  float:left;
-  margin-left: 10px;
+textarea{
+	margin:0;
+	resize:none;
 }
