--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -1,36 +1,5 @@
-/* FLASH MESSAGES */
-#flash_notice, #flash_error, #flash_alert, .alert-error {
-  margin: 10px 0;
-  padding: 10px;
-  text-align: center;
-  color: #333;
-  line-height: 1.4em;
-  font-size: 1.2em;
-  border: 4px solid rgba(0, 0, 0, 0.2);
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-border-radius: 4px;}
-
-#flash_notice {
-  background-color: #E4FBD4;
-}
-
-#flash_error, #flash_alert {
-  background-color: #F5E3E3;
-}
-#flash_alert{
-  background-color: #FFFEDF;
-}
-
-.alert-error{
-  background-color: #F5E3E3;
-}
-
-/* HEADERS */
-h1{
-  font-size: 2.4em;
-  font-family: 'Imprima', Helvetica, arial, sans-serif;
-  text-shadow: 0 2px 0 white;
-  letter-spacing: -1px;
-  margin-bottom:10px;
-}
+#flash_notice, #flash_error, #flash_alert, #flash_info { margin-top:1em; padding:0.8em; margin-bottom:1em; border:2px solid #ddd;}
+#flash_error 	{background:#fbe3e4;color:#8a1f11;border-color:#fbc2c4;}
+#flash_alert 	{background:#fff6bf;color:#514721;border-color:#ffd324;}
+#flash_notice {background:#e6efc2;color:#264409;border-color:#c6d880;}
+#flash_info 	{background:#d5edf8;color:#205791;border-color:#92cae4;}
