--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,10 +2,10 @@
 
 <h1 class="contato"><%= t(".container_title") %></h1>
 
-<%= simple_form_for @contact, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :name,  input_html: {:class => "span4"} %>
-  <%= f.input :email, input_html: {:class => "span4"} %>
-  <%= f.input :message, :as => :text, input_html: {:class => "span5"} %>
+<%= simple_form_for @contact do |f| %>
+  <%= f.input :name %>
+  <%= f.input :email %>
+  <%= f.input :message, :as => :text, input_html: {:rows => "15"} %>
   
   <div class="form-actions">
     <%= f.button :submit, :class => "btn btn-primary" %>
