--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
-<html lang="<%= I18n.locale %>">
-  <head>
-    <meta charset="UTF-8">
-    <title>Alik | <%= content_for?(:title) ? yield(:title) : "Alik " %></title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <%= yield(:header_tags) %>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html lang="<%= I18n.locale %>"> <!--<![endif]-->
+<head>
+	<meta charset="UTF-8">
+	<title>Alik | <%= content_for?(:title) ? yield(:title) : "Alik " %></title>
+	<!-- Uncomment to make IE8 render like IE7 -->
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Imprima" %>
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-    <%= favicon %>
+	<%= yield(:header_tags) %>
+	<%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Imprima" %>
+	<%= stylesheet_link_tag "application" %>
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-		<section id="content">
-			<%= render("shared/header") %>
-			<div id="container" class="sidebar">
-				<div id='container-title'>
-					<%= render("shared/main_header") %>
-				</div>
-				<aside>
-					<%= yield(:sidebar) %>
-				</aside>
-				<section role="main">
-					<%= flash_messages %>
-					<%= yield %>
-				</section>
-			</div>
+	<%= csrf_meta_tags %>
+	<%= favicon %>
+</head>
+<body>
+
+	<div class="row" id="header">
+		<%= render("shared/header") %>
+	</div>
+
+	<div class="row" id="header-search">
+		<%= render("shared/main_header") %>
+	</div>
+
+	<div class="row" id="container">
+		<div class="eight columns" id="main">
+			<%= flash_messages %>
+			<%= yield %>
+		</div>
+		<div class="four columns" id="sidebar">
+			<%= yield(:sidebar) %>
+		</div>
+	</div>
+
+	<div class="row" id="footer">
+		<div class="twelve columns">
 			<%= render("shared/footer") %>
-    </div>
-    <%= analytics "UA-32025057-1" %>
-  </body>
-</html>
+		</div>
+	</div>
 
+	<%= javascript_include_tag "application" %>
+	<%= analytics "UA-32025057-1" %>
+</body>
+</html>
