--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,26 +1,97 @@
-<article class="question-index">
-	<header class="question-header">
-		<%= header_question(question) %>
-  	<span class="question"><%= link_to question.title, question %></span>
-		
-		<div class="answers">
+<div class="row">
+	<div class="seven columns" id="teste1">
+		<article class="question-index">
+			<header>
+				<%= header_question(question) %>
+				<span class="question"><%= link_to question.title, question, :class => "link" %></span>
+			</header>
+			<footer class="question-footer">
+				<%= t("questions.published_at", :time => l(question.created_at, :format => :short)) %>
+			</footer>
+		</article>
+	</div>
+	<div class="five columns" id="teste2">
+		<div class="count">
 			<% if question.answers_count.zero? %>
 			<span class="none_count">Nenhuma resposta</span>
 			<% else %>
 			<span class="number_count"><%= question.answers_count %></span>
 			<%= link_to t(".answer", count: question.answers_count), question %>
 			<% end %>
-			
+		</div>
+		<div class="answers">
 			<% question.answers.each do |answer|%>
 			<span class="user_answer_number">
-				<%= link_to image_tag(avatar_url(answer.user, 18)), user_path(answer.user) %>
+				<%= link_to image_tag(avatar_url(answer.user, 5)), user_path(answer.user) %>
 				<%= link_to answer.user.username, user_path(answer.user) %>
 			</span>
 			<% end %>
 		</div>
-	</header>
+	</div>
+</div>
+<style type="text/css" media="screen">
+	#teste1, #teste2{
+		border-top: 1px dotted #DDD;
+	}
 	
-	<footer class="question-footer">
-		<%= t("questions.published_at", :time => l(question.created_at, :format => :short)) %>
-	</footer>
-</article>
+	.count a{
+		color: #073E5B;
+	}
+	
+	span.user_answer_number img{
+		vertical-align: middle;
+		width:15px;
+	  height:15px;
+	}
+	
+	.count{
+		margin-top: 10px;
+		text-align: right;
+	}
+	
+	span.number_count {
+		line-height: 18px;
+		font-weight: bold;
+		font-size: 1.2em;
+		color: #6792AB;
+	}
+	
+	span.user_answer_number {
+		display: block;
+		margin: 2px;
+		padding: 3px;
+		border: 1px solid #CCC;
+		font-size: 1.0em;
+		float: right;
+		-moz-border-radius: 4px;
+		-webkit-border-radius: 4px;
+		border-radius: 4px;
+		background: #EFEFEF;
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
+	}
+	span.user_answer_number a{
+		color: #073E5B;
+		font-size: 0.8em;
+	}
+	
+	article.question-index{
+	  margin-bottom:20px;
+	}
+	h2.question-header{
+		margin-bottom: 5px;
+		margin-top: 10px;
+		text-transform: uppercase;
+		color: dimGray;
+		font-size: 11px;
+	}
+	footer.question-footer {
+		font-size: 0.9em;
+		color: #AAA;
+		margin-top:4px;
+	}
+	span.question a{
+		text-transform: uppercase;
+		font-size: 20px;
+		color: #495C23;
+	}
+</style>
