--- a/config/recipes/templates/monit/monitrc.erb
+++ b/config/recipes/templates/monit/monitrc.erb
@@ -18,7 +18,7 @@ set alert ernane.sena@gmail.com
 set httpd port 2812
     allow admin:"admin123"
 
-check system blog_server
+check system alik_server
   if loadavg(5min) > 2 for 2 cycles then alert
   if memory > 75% for 2 cycles then alert
   if cpu(user) > 75% for 2 cycles then alert
