Add sql backup to production

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -81,6 +81,9 @@
 body{
 	background: #F2F2F2;
 }
+
+.button.small.gloss.success{font-weight: normal}
+
 ul.buttons-home li{
 	margin-left: 10px;
 }
