--- a/app/views/shared/_main_header.html.erb
+++ b/app/views/shared/_main_header.html.erb
@@ -1,5 +1,5 @@
 <div class="twelve columns" id="busca">
-	<h1>Assessoria jurídica gratuita</h1>
+	<h1>CONSELHOS DE ESPECIALISTAS QUANDO VOCÊ MAIS PRECISA</h1>
 	<div class="row collapse">
 		<div class="ten mobile-three columns">
 			<%= form_tag search_questions_path, :method => :get do %>
