--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,6 +1,3 @@
-body{
-  background: #F2F2F2;
-}
 
 #container {
   background-image: url("/assets/bg-container.png");
@@ -32,32 +29,37 @@ body{
 }
 
 #header-search{
-  background: #EFEFEF;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
 
   -moz-box-shadow: 0 0 10px #ccc;
   -webkit-box-shadow: 0 0 10px #CCC;
   -ms-box-shadow: 0 0 10px #ccc;
   -o-box-shadow: 0 0 10px #ccc;
   box-shadow: 0 0 10px #CCC;
+  
+  border-top: 1px solid white;
+  border-bottom: 1px solid #CCC;
+  border-top: 1px solid white;
+  border-bottom: 1px solid #CCC;
   -webkit-border-top-left-radius: 4px;
   -webkit-border-top-right-radius: 4px;
   -moz-border-radius-topleft: 4px;
   -moz-border-radius-topright: 4px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  background: #EFEFEF;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
 }
 
 #busca{
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  background: #EFEFEF;
+  background: #FFFF;
 }
 
 div#busca h1{
   margin: .5em;
   text-align: center;
-  font-size: 2em;
+  font-size: 1.5em;
   color: #6792AB;
 }
 
