Preparação da home para novo Layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,7 @@
 /*
- *= require layout
  *= require_self
  *= require layout
+ *= require question
  *= require general
  *= require pagination
  *= require forms
