--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -3,3 +3,10 @@
 #flash_alert 	{background:#fff6bf;color:#514721;border-color:#ffd324;}
 #flash_notice {background:#e6efc2;color:#264409;border-color:#c6d880;}
 #flash_info 	{background:#d5edf8;color:#205791;border-color:#92cae4;}
+
+#error_explanation{
+  margin-top:1em; padding:0.8em; margin-bottom:1em; border:2px solid #ddd;
+  background:#fbe3e4;color:#8a1f11;border-color:#fbc2c4;
+}
+#error_explanation h2{ font-size: 1.3em }
+#error_explanation ul li { margin-left: 25px; font-size: 12px; list-style: square }
