--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -61,6 +61,9 @@ div#busca h1{
   text-align: center;
   font-size: 1.5em;
   color: #6792AB;
+  font-family: 'Imprima', Helvetica, arial, sans-serif;
+  text-shadow: 0 2px 0 white;
+  letter-spacing: -1px;
 }
 
 #devise-menu{
@@ -71,5 +74,8 @@ div#busca h1{
 /* ESPECIFICOS */
 #main h1{
   font-size: 2.2em;
+  font-family: 'Imprima', Helvetica, arial, sans-serif;
+  text-shadow: 0 2px 0 white;
+  letter-spacing: -1px;
   color: #333;
 }
