--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,8 +1,10 @@
 <% title t(".title") %>
 <%= simple_form_for [@question, @answer], html: { class: "form-horizontal" } do |f| %>
-  <%= f.input :description, input_html: {class: "span4"}, :hint => "Responda essa pergunta, e deixe a sua resposta ser avaliada.", :placeholder => "Sua Resposta"%>
+  <%= f.input :description, input_html: {rows: "10"}, :hint => "Responda essa pergunta, e deixe a sua resposta ser avaliada.", :placeholder => "Sua Resposta" %>
   
   <div class="form-actions">
-    <%= f.button :submit, :class => "btn btn-primary" %>
+    <%= f.button :submit, :class => "secondary button" %>
+		ou
+		<%= link_to "Cancelar", root_path %>
   </div>
 <% end %>
