--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,62 +5,128 @@
 <h1 class="devise"><%= t(".title") %></h1>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+<%= devise_error_messages! %>
 
-<div class="tabbable">
-  <ul class="nav nav-tabs">
-    <li class="active"><%= link_to "Informações de Segurança", "#tab1", :"data-toggle" => "tab"%></li>
-    <li><%= link_to "Informações Profissionais", "#tab2", :"data-toggle" => "tab"%></li>
-    <li><%= link_to "Informações Acadêmicas", "#tab3", :"data-toggle" => "tab"%></li>
-  </ul>
+<ul class="accordion">
+	<li class="active">
+		<div class="title">
+			<h5>Informações de Segurança</h5>
+		</div>
+		<div class="content">
+			<div class="row">
+				<div class="six columns">         
+					<%= f.input :username %>
+				</div>                            
+				<div class="six columns">         
+					<%= f.input :email %>
+				</div>                            
+			</div>   
 
-  <div class="tab-content">
-    <div class="tab-pane active" id="tab1">
-      <fieldset>
-        <legend>Informações de Segurança</legend>
-        <%= f.input :username,							input_html: {:class => "span4"} %>
-        <%= f.input :email,									input_html: {:class => "span4"} %>
-        <%= f.input :password,							input_html: {:class => "span4"} %>
-        <%= f.input :password_confirmation, input_html: {:class => "span4"} %>
-        <%= f.input :about, 								input_html: {:class => "span4"} %>
-      </fieldset>
-    </div><!-- tab1 -->
+			<div class="row">                                    
+				<div class="six columns">           
+					<%= f.input :password %>
+				</div>                              
+				<div class="six columns">           
+					<%= f.input :password_confirmation %>
+				</div>
+			</div>
+			<%= f.input :about,	input_html: {:rows 	=> "10"} %>
+		</div>
+	</li>
 
-    <div class="tab-pane" id="tab2">
-      <fieldset>
-        <legend>Informações Profissionais</legend>
-        <%= f.input :state_id do %>
-          <%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: true %>
-        <% end %>
-        <%= f.input :city_id do %>
-          <%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
-        <% end %>
-        <%= f.input :avatar_url, 					input_html: {:class => "span4"}, :hint => "Use o #{link_to "gravatar", "https://pt.gravatar.com/site/login/"} para obter sua url" %>
-        <%= f.input :portifolio_of_oab, 	input_html: {:class => "span4"} %>
-        <%= f.input :fields, 							input_html: {:class => "span4"} %>
-        <%= f.input :phone, 							input_html: {:class => "span4"}, :as => :string %>
-        <%= f.input :teaching,            :collection => 1..5%>
-        <%= f.input :professional,        :collection => 1..5%>
-        <%= f.input :books_published,     :collection => 1..5 %>
-        <%= f.input :articles_published,  :collection => 1..5 %>
-      </fieldset>
-    </div><!-- tab2 -->
+	<li>
+		<div class="title">
+			<h5>Informações Profissionais</h5>
+		</div>
+		<div class="content">
+			
+			<fieldset>
+				<div class="row">
+					<div class="six columns">         
+						<%= f.input :state_id do %>
+						<%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: true %>
+						<% end %>
+					</div>                            
+					<div class="six columns">         
+						<%= f.input :city_id do %>
+						<%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
+						<% end %>
+					</div>                            
+				</div>
 
-    <div class="tab-pane" id="tab3">
-      <fieldset>
-        <legend>Informações Acadêmicas e de Experiências</legend>
-        <%= f.input :postgraduate        %>
-        <%= f.input :doctorate_in_law    %>
-        <%= f.input :master_of_law       %>
-        <%= f.input :postgraduate_in_law %>
-        <%= f.input :foreign_laguage     %>
-      </fieldset>
-    </div><!-- tab3 -->
+				<div class="row">
+					<div class="six columns">         
+						<%= f.input :avatar_url, :hint => "Use o #{link_to "gravatar", "https://pt.gravatar.com/site/login/"} para obter sua url" %>
+					</div>                            
+					<div class="six columns">         
+						<%= f.input :phone %>
+					</div>                            
+				</div>
 
-  </div>
-</div>
+				<div class="row">
+					<div class="four columns">         
+						<%= f.input :portifolio_of_oab %>
+					</div>                            
+					<div class="eight columns">         
+						<%= f.input :fields %>
+					</div>                            
+				</div>
+			</fieldset>
+			
+			<fieldset>
+				<div class="row">
+					<div class="six columns">         
+						<%= f.input :teaching,            :collection => 1..10 %>
+					</div>                            
+					<div class="six columns">         
+						<%= f.input :professional,        :collection => 1..10 %>
+					</div>                            
+				</div>
+
+				<div class="row">
+					<div class="six columns">         
+						<%= f.input :books_published,     :collection => 1..10 %>
+					</div>                            
+					<div class="six columns">         
+						<%= f.input :articles_published,  :collection => 1..10 %>
+					</div>                            
+				</div>
+			</fieldset>
+      
+		</div>
+	</li>
+	
+	<li>
+		<div class="title">
+			<h5>Informações Acadêmicas e de Experiências</h5>
+		</div>
+		<div class="content">
+			<fieldset>
+				<div class="row">
+					<div class="three columns">         
+						<%= f.input :postgraduate        %>
+					</div>                            
+					<div class="three columns">         
+						<%= f.input :master_of_law       %>
+					</div>   
+					<div class="three columns">         
+						<%= f.input :doctorate_in_law    %>
+					</div>
+					<div class="three columns">         
+						<%= f.input :postgraduate_in_law %>
+					</div>                         
+				</div>
+			</fieldset>
+			<fieldset>
+      	<%= f.input :foreign_laguage     %>
+			</fieldset>
+		</div>
+	</li>
+</ul>	
+
 
 <div class="form-actions">
-  <%= f.button :submit, t(".submit"), class: "btn btn-primary" %>
+  <%= f.button :submit, t(".submit"), class: "secondary button" %> or
   <%= link_to "Cancelar", root_path, :class => "btn"%>
 </div>
 <% end %>
