--- a/app/views/questions/search.html.erb
+++ b/app/views/questions/search.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= t(".container_title") %></h1>
 <p>
-  Sua busca por <strong><%= params[:query].inspect %></strong>
+  Sua busca por <strong><%= params[:search].inspect %></strong>
   retornou os seguintes resultados:
 </p>
 
