--- a/app/views/shared/_main_header.html.erb
+++ b/app/views/shared/_main_header.html.erb
@@ -3,7 +3,7 @@
 	<div class="row collapse">
 		<div class="ten mobile-three columns">
 			<%= form_tag search_questions_path, :method => :get do %>
-			<%= text_field_tag :query, params[:query] %>
+			<%= text_field_tag :search, params[:search] %>
 		</div>
 		<div class="two mobile-one columns">
 			<%= submit_tag t("form.buttons.search"), :class => "postfix button expand gloss success" %>
