--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,6 +6,6 @@
  *= require pagination
  *= require forms
  *= require foundation_and_overrides
- *= require jquery.ui.dialog
+ *= require jquery.ui.accordion
  *= require jquery.ui.autocomplete
 */
