--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,15 +4,14 @@
 
 <h1 class="devise"><%= t(".title") %></h1>
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 <%= devise_error_messages! %>
 <%= f.captcha %>
 
-<ul class="accordion">
-	<li class="active">
-		<div class="title">
-			<h5>Informações de Segurança</h5>
-		</div>
+<div id="devise_form">
+	<div id="accordion">
+		
+		<h3><a href="#">Informações de Segurança</a></h3>
 		<div class="content">
 			<div class="row">
 				<div class="six columns">         
@@ -33,24 +32,19 @@
 			</div>
 			<%= f.input :about,	input_html: {:rows 	=> "10"} %>
 		</div>
-	</li>
-
-	<li>
-		<div class="title">
-			<h5>Informações Profissionais</h5>
-		</div>
+		
+		<h3><a href="#">Informações Profissionais</a></h3>
 		<div class="content">
-			
 			<fieldset>
 				<div class="row">
 					<div class="six columns">         
 						<%= f.input :state_id do %>
-						<%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: true %>
+						<%= f.collection_select :state_id, State.all, :id, :name, :selected => resource.city.present? ? resource.city.state_id : resource.state_id, :include_blank => 'Selecione um estado' %>
 						<% end %>
 					</div>                            
 					<div class="six columns">         
 						<%= f.input :city_id do %>
-						<%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
+						<%= f.collection_select :city_id, cities(resource.city.present? ? resource.city.state_id : resource.state_id), :id, :name, :selected => resource.city_id, :include_blank => resource.city.present? || resource.state_id.present? ? 'Selecione a cidade' : 'Selecione um estado' %>
 						<% end %>
 					</div>                            
 				</div>
@@ -93,14 +87,9 @@
 					</div>                            
 				</div>
 			</fieldset>
-      
 		</div>
-	</li>
-	
-	<li>
-		<div class="title">
-			<h5>Informações Acadêmicas e de Experiências</h5>
-		</div>
+		
+		<h3><a href="#">Informações Acadêmicas e de Experiências</a></h3>
 		<div class="content">
 			<fieldset>
 				<div class="row">
@@ -122,8 +111,9 @@
       	<%= f.input :foreign_laguage     %>
 			</fieldset>
 		</div>
-	</li>
-</ul>	
+		
+	</div>
+</div>
 
 
 <div class="form-actions">
@@ -133,3 +123,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
