Add checksum cron

--- a/config/recipes/templates/monit/cron.erb
+++ b/config/recipes/templates/monit/cron.erb
@@ -4,7 +4,7 @@ check process cron with pidfile /var/run/crond.pid
    if 5 restarts within 5 cycles then timeout
    depends on cron_rc
 
- check file cron_rc with path /etc/init.d/crond
+ check file cron_rc with path /etc/init.d/cron
    if failed checksum then unmonitor
    if failed permission 755 then unmonitor
    if failed uid root then unmonitor
