--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,6 +3,7 @@
  *= require layout
  *= require question
  *= require general
+ *= require profile
  *= require pagination
  *= require forms
  *= require foundation_and_overrides
